<resources>
    <string name="app_name">Walk and Goal</string>

    <string name="activity_add_progress">Add Activity</string>
    <string name="activity_add_test_progress">Add Test Activity</string>
    <string name="activity_add_goal">Add New Goal</string>
    <string name="activity_preferences">Settings</string>

    <string name="menu_item_home_active">Make Active</string>
    <string name="menu_item_home_edit">Edit</string>
    <string name="menu_item_home_delete">Delete</string>
    <string name="menu_change_units">Change Units</string>
    <string name="menu_delete_history">Delete History</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="screen_home">Home</string>
    <string name="screen_history">History</string>
    <string name="screen_statistics">Statistics</string>
    <string name="screen_test">Test Mode</string>
    <string name="screen_settings">Settings</string>

    <string name="form_label_name">Name</string>
    <string name="form_label_distance">Distance</string>
    <string name="form_label_units">Units</string>

    <string name="button_add">ADD</string>

    <string name="units_steps">Steps</string>
    <string name="units_metres">Metres</string>
    <string name="units_yards">Yards</string>
    <string name="units_km">Km</string>
    <string name="units_miles">Miles</string>

    <string-array name="units_array">
        <item>Steps</item>
        <item>Metres</item>
        <item>Yards</item>
        <item>Km</item>
        <item>Miles</item>
    </string-array>

    <string name="history_day_goal_divider">GOAL</string>

    <string name="prompt_pick_date">Pick Date</string>

    <string name="pref_mapping">Steps to Metres Mapping</string>
    <string name="pref_mapping_summary">Defines the length in metres that a step is equivalent to</string>
    <string name="pref_edit_goals">Edit Goals</string>
    <string name="pref_title">General</string>

    <string name="fragment_statistics_show">Show statistics</string>
    <string name="fragment_history_show">Show goals</string>

    <string-array name="period_array">
        <item>for all history</item>
        <item>for past week</item>
        <item>for past month</item>
        <item>between</item>
    </string-array>

    <string-array name="period_array_goals">
        <item>from all history</item>
        <item>from past week</item>
        <item>from past month</item>
        <item>between</item>
    </string-array>

    <string name="date_from">FROM</string>
    <string name="date_to">TO</string>

    <string name="statistics_min_activity">Min. Daily Activity</string>
    <string name="statistics_avg_activity">Avg. Daily Activity</string>
    <string name="statistics_max_activity">Max. Daily Activity</string>

    <string name="statistics_min_goal">Min. Goal Completion</string>
    <string name="statistics_avg_goal">Avg. Goal Completion</string>
    <string name="statistics_max_goal">Max. Goal Completion</string>

    <string name="test_choose_date">Choose a test date</string>

    <string name="history_filter_completion">Filter by completion %</string>

    <string-array name="completion_array">
        <item>No percentage filter</item>
        <item>Show goals completed below</item>
        <item>Show goals completed above</item>
        <item>Show fully completed goals</item>
    </string-array>

    <string name="all_history">from all history</string>
    <string name="statistics_all_history">for all history</string>

</resources>
