<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_title"
        android:key="pref_key_storage_settings">
        <EditTextPreference
            android:key="pref_step_mapping"
            android:title="@string/pref_mapping"
            android:summary="@string/pref_mapping_summary"
            android:defaultValue="0.762" />
        <SwitchPreference
            android:key="pref_edit_goals"
            android:title="@string/pref_edit_goals"
            android:defaultValue="true" />
        <SwitchPreference
            android:key="pref_test_mode"
            android:title="Test Mode"
            android:defaultValue="false" />
        <SwitchPreference
            android:key="pref_notifications"
            android:title="Goal Complete Notifications"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="History"
        android:key="pref_key_history_settings">

        <ListPreference
            android:key="pref_history_units"
            android:title="Default Units"
            android:summary="%s"
            android:entries="@array/units_array"
            android:entryValues="@array/units_array"
            android:defaultValue="@string/units_steps"/>

        <ListPreference
            android:key="pref_history_time"
            android:title="Default Time Period"
            android:summary="%s"
            android:entries="@array/period_array_goals"
            android:entryValues="@array/period_array_goals"
            android:defaultValue="@string/all_history"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Statistics"
        android:key="pref_key_statistics_settings">

        <ListPreference
            android:key="pref_statistics_units"
            android:title="Default Units"
            android:summary="%s"
            android:entries="@array/units_array"
            android:entryValues="@array/units_array"
            android:defaultValue="@string/units_steps"/>

        <ListPreference
            android:key="pref_statistics_time"
            android:title="Default Time Period"
            android:summary="%s"
            android:entries="@array/period_array"
            android:entryValues="@array/period_array"
            android:defaultValue="@string/statistics_all_history"/>

    </PreferenceCategory>

</PreferenceScreen>