<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_history_show"
            android:textSize="22sp"
            android:textColor="@color/colorTextSecondary"/>

        <Spinner
            android:id="@+id/spinner_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:id="@+id/from_to_section"
        android:visibility="gone">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/date_from"
            android:id="@+id/button_from_date"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorTextSecondary"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="20sp"
            android:id="@+id/date_seperator"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/button_to_date"
            android:text="@string/date_to"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorTextSecondary"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="?android:attr/listDivider"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/button_filter_completion"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/history_filter_completion"
        android:textSize="20sp"
        android:textColor="@color/colorTextSecondary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/history_other_recycler"
        android:overScrollMode="never"
        android:paddingTop="0dp"
        android:paddingBottom="5dp"/>

</LinearLayout>